--- a/client/src/components/AddHotel.module.css
+++ b/client/src/components/AddHotel.module.css
@@ -1,17 +1,19 @@
 .container {
   height: 100vh;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
+  display: flex;
+  flex-direction: row;
 }
 
 .form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  width: 40%;
-  margin: 8% 0 0 5%;
-  /* gap: 20px; */
+  width: 77%;
+  margin: 19% 0 0 5%;
+  z-index: 10;
+  background-color: white;
+  gap: 30px;
+  border-radius: 20px;
+  padding: 20px;
 }
 
 .form Button {
@@ -25,9 +27,21 @@
 .input {
   width: 250px;
   margin: 20px;
+  z-index: 10 !important;
 }
 
 .showHotels {
-  margin: 20px 0 0 20px;
+  margin: 20px 0 0 20px !important;
   background-color: black !important;
+}
+
+.left {
+  width: 50%;
+}
+
+.right {
+  background-color: #fc3b5f;
+  height: 100vh;
+  width: 60%;
+  clip-path: polygon(100% 0, 0 20%, 60% 100%, 100% 100%);
 }
