--- a/client/src/components/HomePage/HomePage.module.css
+++ b/client/src/components/HomePage/HomePage.module.css
@@ -3,14 +3,14 @@
   flex-direction: column;
 }
 
-.filter {
-  height: 50vh;
+.famous-destinations {
+  height: 20vh;
   background-color: #fc3b5f;
   clip-path: polygon(0% 100%, 100% 75%, 100% 0%, 0% 0%);
 }
 
 .add-hotel {
-  width: 10%;
+  width: 12%;
   margin: 20px 0 0 15% !important;
   background-color: black !important;
   border-radius: 10px !important;
@@ -28,4 +28,60 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+}
+
+.slider {
+  width: 90%;
+  margin: 30px 0 20px 0;
+}
+
+.input {
+  width: 250px;
+  margin: 20px 0 20px 0 !important;
+}
+
+.filter-heading {
+  font-size: 28px;
+  margin: 20px 0 20px 15%;
+  color: grey;
+  font-weight: bold;
+}
+
+.label {
+  /* margin: 20px 0 0 15%; */
+  color: grey;
+  font-size: 20px;
+}
+
+.filters {
+  display: flex;
+  flex-direction: row;
+  margin-left: 15%;
+}
+
+.location-filter {
+  display: flex;
+  flex-direction: column;
+  margin-right: 8%;
+}
+
+.price-filter {
+  width: 30%;
+  /* display: flex;
+  flex-direction: column;
+  align-self: center; */
+}
+
+.message {
+  display: flex;
+  margin-top: 8%;
+  justify-content: center;
+  font-size: 35px;
+  font-weight: bold;
+  color: grey;
+}
+
+hr {
+  width: 85%;
+  margin: 20px 7.5%;
 }
