--- a/client/src/components/AddHotel/AddHotel.module.css
+++ b/client/src/components/AddHotel/AddHotel.module.css
@@ -2,6 +2,10 @@
   height: 100vh;
   display: flex;
   flex-direction: row;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .form {
