--- a/client/src/components/Details/Details.module.css
+++ b/client/src/components/Details/Details.module.css
@@ -7,6 +7,10 @@
   margin: 10vh 0 0 5%;
   border-radius: 20px;
   border: 1px solid grey;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .hotel-info p {
