--- a/client/src/components/HomePage/HomePage.module.css
+++ b/client/src/components/HomePage/HomePage.module.css
@@ -1,6 +1,10 @@
 .container {
   display: flex;
   flex-direction: column;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .famous-destinations {
