--- a/client/src/components/HotelCard/HotelCard.module.css
+++ b/client/src/components/HotelCard/HotelCard.module.css
@@ -9,6 +9,10 @@
   border-radius: 20px;
   border: 1px solid rgb(169, 168, 168);
   cursor: pointer;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .container p {
