--- a/client/src/components/HomePage/HomePage.module.css
+++ b/client/src/components/HomePage/HomePage.module.css
@@ -10,7 +10,7 @@
 .famous-destinations {
   height: 20vh;
   background-color: rgb(245, 242, 243);
-  /* background-color: #fc3b5f; */
+  /* background-color: white; */
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -75,6 +75,11 @@
   align-self: center; */
 }
 
+hr {
+  width: 85%;
+  margin: 20px 7.5%;
+}
+
 .message {
   display: flex;
   margin-top: 8%;
@@ -82,9 +87,4 @@
   font-size: 35px;
   font-weight: bold;
   color: grey;
-}
-
-hr {
-  width: 85%;
-  margin: 20px 7.5%;
 }
