--- a/client/src/components/HotelCard/HotelCard.module.css
+++ b/client/src/components/HotelCard/HotelCard.module.css
@@ -2,38 +2,65 @@
   display: flex;
   flex-direction: column;
   margin-top: 3%;
-  margin-left: 15%;
-  background-color: rgb(245, 242, 243);
-  width: 50%;
+  margin-left: 10%;
+  background-color: white;
+  width: 20%;
   height: 20%;
   border-radius: 20px;
-  border: 1px solid rgb(169, 168, 168);
   cursor: pointer;
 
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+
+  margin-bottom: 30px;
+}
+
+.container img {
+  border-radius: 20px 20px 20px 20px;
 }
 
 .container p {
-  margin-left: 5%;
-  padding-top: 10px;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-top: 5px;
+}
+
+.starRating {
+  font-weight: normal;
+  font-size: 16px;
 }
 
 .hotel-name {
-  font-size: x-large;
-  margin-top: 1.75%;
+  font-size: 15px;
+  margin-top: 0;
+  font-weight: 500;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.price {
+  color: grey;
+  font-size: 15px;
+}
+
+.minPrice {
+  color: black;
 }
 
 .city {
-  font-size: larger;
+  font-size: 15px;
+  color: grey;
 }
-.rating {
+/* .rating {
   font-size: large;
   margin-bottom: 20px;
-}
+} */
 
-.location-emoji {
-  height: 20px;
-  width: 20px;
+.hotel-name img {
+  height: 15px;
+  width: 16px;
+  margin-right: 5px;
 }
