--- a/client/src/components/CityCard/CityCard.module.css
+++ b/client/src/components/CityCard/CityCard.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 90px;
   width: 100px;
-  /* border: 1px solid grey; */
+  border: 1px solid rgb(243, 239, 239);
   border-radius: 15px;
   color: black;
 
