--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .container {
   height: 10vh;
-  background-color: #fc3b5f;
+  /* background-color: #fc3b5f; */
+  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -14,7 +15,19 @@
   margin: 0 0 0 5%;
 }
 
-.add-hotel {
+.logo {
+  height: 10vh;
+  width: 45%;
+  background-color: #fc3b5f;
+
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+
+  clip-path: polygon(0% 0%, 100% 0%, 90% 100%, 0% 100%);
+}
+
+.add-hotel-btn {
   width: 170px;
   margin: 0 5% 0 0 !important;
   background-color: black !important;
