--- a/client/src/components/HomePage/HomePage.module.css
+++ b/client/src/components/HomePage/HomePage.module.css
@@ -8,13 +8,14 @@
 }
 
 .famous-destinations {
-  height: 20vh;
-  background-color: rgb(245, 242, 243);
+  height: 15vh;
+  /* background-color: rgb(245, 242, 243); */
   /* background-color: white; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 4vh;
   /* clip-path: polygon(0% 100%, 100% 75%, 100% 0%, 0% 0%); */
 }
 
@@ -70,9 +71,6 @@
 
 .price-filter {
   width: 30%;
-  /* display: flex;
-  flex-direction: column;
-  align-self: center; */
 }
 
 hr {
@@ -87,4 +85,13 @@ hr {
   font-size: 35px;
   font-weight: bold;
   color: grey;
+}
+
+.hotels-grid {
+  width: 90%;
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  place-items: center;
+  margin: 0 auto;
 }
